testdata/not_valid/key_not_uniq.out
error: testdata/not_valid/key_not_uniq.kevs:3: parse: key 'x' is not unique for current table
